--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "HedgeTech"
-version = "0.0.0"
+version = "0.0.1"
 description = "A unified, high-performance API layer that powers all trading infrastructure across the HedgeTech ecosystem, providing modular, scalable, and real-time interfaces for market data, order management, and execution systems."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -33,7 +33,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
 
     "Intended Audience :: Developers",
     "Intended Audience :: Financial and Insurance Industry",
